--- a/miniproject-data-science.ipynb
+++ b/miniproject-data-science.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> ##### Antes de cargar el csv, he modificado los datos faltantes en el propio archivo, tales como 97, 99 o la fecha 9999-99-99. Así puedo trabajar más cómodo con los datos."
+    "> ##### Antes de cargar el csv, he modificado los datos faltantes en el propio archivo, tales como 97, 99 o la fecha 9999-99-99. Así puedo trabajar más cómodo con ellos."
    ]
   },
   {
